fix large gap on first event header

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -2,6 +2,10 @@
     background-color: #eeeeee;
 }
 
+.event-header:first-of-type {
+    margin-top: -20px !important;
+}
+
 .events-list a {
     color: #80CBC3 !important;
 }
